knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Opportunity_Trending__c/Opportunity_Trending__c.object-meta.xml
<CustomObject>
    <description>Stores historical data about pipeline opportunities via report snapshots.</description>
    <label>Opportunity Trending</label>
    <nameField>
        <displayFormat>TREND-{000000}</displayFormat>
        <label>Opportunity Trending Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Opportunities Trending</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>