knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Opportunity_Trending__c/fields/CE_by_Volume__c.field-meta.xml
<CustomField>
    <fullName>CE_by_Volume__c</fullName>
    <label>CE by Volume</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>