knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Opportunity_Trending__c/fields/Patient_Collections__c.field-meta.xml
<CustomField>
    <fullName>Patient_Collections__c</fullName>
    <label>Patient Collections</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>