knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Opportunity_Trending__c/fields/Projected_Sign_Date__c.field-meta.xml
<CustomField>
    <fullName>Projected_Sign_Date__c</fullName>
    <label>Projected Sign Date</label>
    <type>Date</type>
</CustomField>