knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Opportunity_Trending__c/fields/Verbal_Award_Date__c.field-meta.xml
<CustomField>
    <fullName>Verbal_Award_Date__c</fullName>
    <label>Verbal Award Date</label>
    <type>Date</type>
</CustomField>