knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Opportunity_Trending__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Opportunity__c</columns>
    <columns>Opportunity_Record_Type__c</columns>
    <columns>Service_Line_s__c</columns>
    <columns>Service_Line__c</columns>
    <columns>Probability__c</columns>
    <columns>Projected_Sign_Date__c</columns>
    <columns>Snapshot_Date__c</columns>
    <columns>Stage__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>Lost_Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Snapshot_Date__c</field>
        <operation>equals</operation>
        <value>7/23/2021</value>
    </filters>
    <label>All</label>
</ListView>